show_color.js修正。右クリックメニュー呼び出し追加。

--- a/macro/show_color.html
+++ b/macro/show_color.html
@@ -31,7 +31,7 @@
 <body>
 </body>
 <script>
-	//document.onkeydown = function(){ window.close() };
+	document.onkeydown = function(){ window.close() };
 	//document.body.onblur = function(){ window.close() };
 	document.onclick = function(){ window.close() };
     var color = location.hash.replace("#","")
